--- a/skills.html
+++ b/skills.html
@@ -5,8 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="static/styles.css">
 </head>
-<body>
+<body class="page">
+    <nav>
+        <a class="nav" href="index.html">About Me</a>
+        <a class="nav" href="favorites.html">Favorites</a>
+        <a class="nav" href="spots.html">Spots</a>
+    </nav>
+
+    <header>
+        <!--copyright symbol-->
+    </header>
+
+    <div id="hobbies">
+        <ul></ul>
+    </div>
+
+    <footer>
+        <!--markup validation-->
+    </footer>
     
 </body>
 </html>
