--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>About Me</title>
+        <link rel="stylesheet" href="static/styles.css">
+    </head>
+    <body class="page">
+        <nav>
+            <a class="nav" href="favorites.html">Favorites</a>
+            <a class="nav" href="skills.html">Skills</a>
+            <a class="nav" href="spots.html">Spots</a>
+        </nav>
+
+        <header>
+            <!--copyright symbol-->
+        </header>
+
+        <h1>Hi, my name is Taran R</h1>
+        <h2>I live in Brooklyn and go to <a href="https://www.bths.edu/" class="link-text">Brooklyn Tech</a>.</h2>
+        <img src="static/brooklyntech.jpg" class="img">
+        <div class="info">
+            <p></p>
+            <img src="">
+            <p>Here are some of my favorite foods:</p>
+            <ul>
+                <li>Sushi</li>
+                <li>Pizza</li>
+                <li>Burgers</li>
+            </ul>
+        </div>
+
+        <footer>
+            <!--markup validation-->
+        </footer>
+    </body>
 </html>
