--- a/spots.html
+++ b/spots.html
@@ -5,8 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="static/styles.css">
 </head>
-<body>
-    
+<body class="page">
+    <nav>
+        <a class="nav" href="index.html">About Me</a>
+        <a class="nav" href="favorites.html">Favorites</a>
+        <a class="nav" href="skills.html">Skills</a>
+    </nav>
+
+    <header>
+        <!--copyright symbol-->
+    </header>
+
+    <footer>
+        <!--markup validation-->
+    </footer>
 </body>
 </html>
