--- a/index.html
+++ b/index.html
@@ -14,16 +14,13 @@
             <a class="nav" href="spots.html">Spots</a>
         </nav>
 
-        <header>
-            <!--copyright symbol-->
-        </header>
-
         <h1>Hi, my name is Taran R</h1>
         <h2>I live in Brooklyn and go to <a href="https://www.bths.edu/" class="link-text">Brooklyn Tech</a>.</h2>
         <img src="static/brooklyntech.jpg" class="img">
         <div class="info">
-            <p></p>
-            <img src="">
+            <p>I have two cats</p>
+            <img src="cat.jpg">
+            <!--Expand list later-->
             <p>Here are some of my favorite foods:</p>
             <ul>
                 <li>Sushi</li>
@@ -33,7 +30,7 @@
         </div>
 
         <footer>
-            <!--markup validation-->
+            <p>&copy;</p>
         </footer>
     </body>
 </html>
