--- a/skills.html
+++ b/skills.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Skills</title>
     <link rel="stylesheet" href="static/styles.css">
 </head>
 <body class="page">
@@ -14,16 +14,42 @@
         <a class="nav" href="spots.html">Spots</a>
     </nav>
 
-    <header>
-        <!--copyright symbol-->
-    </header>
-
-    <div id="hobbies">
-        <ul></ul>
+    <div class="skills">
+        <p>Here are the programming languages that I could teach: </p>
+        <ul>
+            <li><a href="https://www.python.org">Python</a></li>
+            <li>Java</li>
+            <li>Javascript</li>
+        </ul>
+        <h2>Other skills</h2>
+        <p>I could also teach someone how to skip a rock, here's some audio I found of a rock skipping across a frozen lake:</p>
+        <audio controls src="static/rock skipping.mp3"></audio>
+        <p>Here are some of the best throws ever, in skips:</p>
+        <!--Expand table later-->
+        <table>
+            <thead>
+                <tr>
+                    <td>Skipper</td>
+                    <td>Number of skips</td>
+                </tr>
+            </thead>
+            <tr>
+                <td>Kurt Steiner</td>
+                <td>88</td>
+            </tr>
+            <tr>
+                <td>Max Steiner</td>
+                <td>65</td>
+            </tr>
+            <tr>
+                <td>Russel Byars</td>
+                <td>51</td>
+            </tr>
+        </table>
     </div>
 
     <footer>
-        <!--markup validation-->
+        <p>&copy;</p>
     </footer>
     
 </body>
