--- a/spots.html
+++ b/spots.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Spots</title>
     <link rel="stylesheet" href="static/styles.css">
 </head>
 <body class="page">
@@ -14,12 +14,25 @@
         <a class="nav" href="skills.html">Skills</a>
     </nav>
 
-    <header>
-        <!--copyright symbol-->
-    </header>
+    <div class="spots" style="width: 100%; height: 100%;">
+        <h1 style="text-align: center;">Some of my favorite spots in NYC:</h1>
+        <ul>
+            <li>A sushi restaurant called <a src="https://menupages.com/nagoya-sushi/1907-kings-hwy-brooklyn">Nagoya</a></li>
+            <li>The piers near the Brooklyn Bridge</li>
+            <li>Prospect Park</li>
+        </ul>
+        <!--Get a better picture-->
+        <img src="static/nagoya.jpg">
+        <h2 style="text-align: center;">Some of my least favorite spots in NYC:</h2>
+        <ul>
+            <li>The subway</li>
+            <li>Brooklyn Tech</li>
+        </ul>
+        <img src="static/subway.webp">
+    </div>
 
     <footer>
-        <!--markup validation-->
+        <p>&copy;</p>
     </footer>
 </body>
 </html>
