--- a/favorites.html
+++ b/favorites.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Favorites</title>
     <link rel="stylesheet" href="static/styles.css">
 </head>
 <body class="page">
@@ -14,11 +14,24 @@
         <a class="nav" href="spots.html">Spots</a>
     </nav>
 
-    <header>
-        <!--copyright symbol-->
-    </header>
+    <div id="hobbies" style="width: 100%; height: 100%;">
+        <h1 style="text-align: center;">My hobbies</h1>
+        <h2>Here are some of hobbies:</h2>
+        <ul>
+            <li><a src="https://www.chess.com">Chess</a></li>
+            <li>Reading</li>
+            <li>Baseball</li>
+            <li>Coding</li>
+            <li>Board games</li>
+        </ul>
+        <img src="static/chess.jpg">
+        <img src="static/catan.jpg">
+        <p>Here's a baseball video:</p>
+        <iframe src="https://www.youtube.com/embed/hyjfTvbfoqY" frameborder="0"></iframe>
+    </div>
 
     <footer>
+        <p>&copy;</p>
         <!--markup validation-->
     </footer>
     
